# qt_base

./: .clang-format  .gitignore  Dockerfile.qt-base  Readme.md  build.sh  docker-compose.yml
.devcontainer/: Dockerfile.vscode  devcontainer.json
app/: CMakeLists.txt  Dockerfile  main.cpp
app/res/: resources.qrc
app/scripts/: format_all_files.sh
app/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/src/gui/: CMakeLists.txt
app/src/gui/framelesswindow/: CMakeLists.txt  framelesswindow.cpp  framelesswindow.h
app/toolchain/: linux.cmake  win.cmake
